# neovim-python-opencv-template

./: README.md  main.py  pyproject.toml
