# THIS FILE IS TO BE USED AS EXAMPLE PURPOSE ONLY.

[tool.poetry]
name = "test-stub"
version = "0.1.0"
description = ""
authors = [" AUTHOR "]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.5"
opencv-python = "^4.5.3"
opencv-contrib-python = "^4.5.3"

[tool.poetry.dev-dependencies]
# -- DEV ON NEOVIM REQUIREMENT ----
neovim = "^0.3.1"   # python provider
mypy = "^0.910"     # stub file generator
# ----------------------------------

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
